# HISE

./: .gitignore  .gitmodules  .travis.yml  HowToBuildInstaller.md  NewBuildOSX  README.md  Updating HISE.md  changeModuleVersion.bat  currentGitHash.txt  et --hard HEAD~1  license.txt  set_version.bat  updateGitHash.bat  updateGitHash.command  updateGitHash.command.bat  version_setter.command
JUCE/: JuceHeadlessPlugin.patch  working608_patch.diff
customized_JUCE_files/: juce_Variant.cpp  juce_Variant.h
hi_backend/: hi_backend.cpp  hi_backend.h  hi_backend.mm  juce_module_info
hi_components/: hi_components.cpp  hi_components.h
hi_core/: BuildVersion.h  Doxyfile.doxygen  LibConfig.h  Macros.h  copyProtectionMacros.h  hi_core.cpp  hi_core.h  hi_core.mm  hi_core_02.cpp  hi_core_04.cpp  juce_module_info  mainpage.h
hi_dsp/: Processor.cpp  Processor.h  ProcessorInterfaces.cpp  ProcessorInterfaces.h  Routing.cpp  Routing.h  RoutingEditor.cpp  RoutingEditor.h  hi_dsp.cpp  hi_dsp.h
hi_dsp_library/: hi_dsp_library.cpp  hi_dsp_library.h  hi_dsp_library.mm  hi_dsp_library_01.cpp  hi_dsp_library_02.cpp  juce_module_info
hi_faust/: FaustStaticWrapper.h  FaustUI.h  FaustWrapper.h  hi_faust.h
hi_faust_jit/: FaustJitNode.cpp  FaustJitNode.h  FaustMenuBar.cpp  FaustMenuBar.h  FaustWrapper.cpp  FaustWrapper.h  hi_faust_jit.cpp  hi_faust_jit.h
hi_faust_lib/: hi_faust_lib.cpp  hi_faust_lib.h  hi_faust_lib_02.cpp
hi_faust_types/: hi_faust_types.h
hi_frontend/: hi_frontend.cpp  hi_frontend.h  hi_frontend.mm  juce_module_info
hi_jit/: hi_jit.mm  hi_jit_public.h
hi_lac/: Readme.md  hi_lac.cpp  hi_lac.h  hi_lac.mm  hi_lac_02.cpp
hi_loris/: fix_warning_post.h  fix_warning_pre.h  hi_loris.cpp  hi_loris.h  hi_loris.mm  hi_loris_1.cpp  hi_loris_10.cpp  hi_loris_11.cpp  hi_loris_12.cpp  hi_loris_13.cpp  hi_loris_14.cpp  hi_loris_15.cpp  hi_loris_16.cpp  hi_loris_17.cpp  hi_loris_18.cpp  hi_loris_19.cpp  hi_loris_2.cpp  hi_loris_20.cpp  hi_loris_21.cpp  hi_loris_22.cpp  hi_loris_23.cpp  hi_loris_24.cpp  hi_loris_25.cpp  hi_loris_26.cpp  hi_loris_27.cpp  hi_loris_28.cpp  hi_loris_29.cpp  hi_loris_3.cpp  hi_loris_30.cpp  hi_loris_31.cpp  hi_loris_32.cpp  hi_loris_33.cpp  hi_loris_34.cpp  hi_loris_35.cpp  hi_loris_36.cpp  hi_loris_37.cpp  hi_loris_38.cpp  hi_loris_39.cpp  hi_loris_4.cpp  hi_loris_40.cpp  (+11 more)
hi_loris/loris/src/: AiffData.cpp  AiffData.h  AiffFile.cpp  AiffFile.h  Analyzer.cpp  Analyzer.h  AssociateBandwidth.cpp  BigEndian.cpp  BigEndian.h  Breakpoint.cpp  Breakpoint.h  BreakpointUtils.cpp  BreakpointUtils.h  Channelizer.cpp  Channelizer.h  Collator.cpp  Collator.h  Dilator.cpp  Dilator.h  Distiller.cpp  Envelope.cpp  Envelope.h  Exception.h  F0Estimate.cpp  Filter.cpp  Filter.h  FourierTransform.cpp  FourierTransform.h  FrequencyReference.cpp  FrequencyReference.h  Fundamental.cpp  Fundamental.h  Harmonifier.cpp  Harmonifier.h  ImportLemur.cpp  KaiserWindow.cpp  LinearEnvelope.cpp  LinearEnvelope.h  LorisExceptions.cpp  Makefile.am  (+45 more)
hi_modules/: hi_modules.cpp  hi_modules.h  hi_modules.mm  hi_modules_01.cpp  hi_modules_02.cpp  hi_modules_03.cpp  hi_modules_04.cpp  hi_modules_05.cpp  hi_modules_06.cpp  hi_modules_07.cpp  juce_module_info
hi_native_jit/: hi_native_jit.cpp  hi_native_jit.h  hi_native_jit_public.h  list.txt
hi_player/: hi_player.cpp  hi_player.h  hi_player.mm  juce_module_info
hi_rlottie/: hi_rlottie.cpp  hi_rlottie.h  hi_rlottie.mm  hi_rlottie_1.cpp  hi_rlottie_10.cpp  hi_rlottie_11.cpp  hi_rlottie_12.cpp  hi_rlottie_13.cpp  (+30 more)
hi_tools/hi_neural/RTNeural/RTNeural/: CMakeLists.txt  Layer.h  Model.h  ModelT.h  RTNeural.cpp  RTNeural.h  common.h  config.h  model_loader.h  torch_helpers.h
hi_tools/hi_neural/RTNeural/RTNeural/activation/: activation.h  activation_eigen.h  activation_xsimd.h
hi_tools/hi_neural/RTNeural/RTNeural/batchnorm/: batchnorm.h  batchnorm.tpp  batchnorm2d.h  batchnorm2d.tpp  batchnorm2d_eigen.h  batchnorm2d_eigen.tpp  batchnorm2d_xsimd.h  batchnorm2d_xsimd.tpp  batchnorm_eigen.h  batchnorm_eigen.tpp  batchnorm_xsimd.h  batchnorm_xsimd.tpp
hi_tools/hi_neural/RTNeural/RTNeural/conv1d/: conv1d.h  conv1d.tpp  conv1d_eigen.h  conv1d_eigen.tpp  conv1d_xsimd.h  conv1d_xsimd.tpp  strided_conv1d.h
hi_tools/hi_neural/RTNeural/RTNeural/conv1d_stateless/: conv1d_stateless.h  conv1d_stateless.tpp  conv1d_stateless_eigen.h  conv1d_stateless_eigen.tpp  conv1d_stateless_xsimd.h  conv1d_stateless_xsimd.tpp
hi_tools/hi_neural/RTNeural/RTNeural/conv2d/: conv2d.h  conv2d.tpp  conv2d_eigen.h  conv2d_eigen.tpp  conv2d_xsimd.h  conv2d_xsimd.tpp
hi_tools/hi_neural/RTNeural/RTNeural/dense/: dense.h  dense_eigen.h  dense_xsimd.h
hi_tools/hi_neural/RTNeural/RTNeural/gru/: gru.h  gru.tpp  gru_eigen.h  gru_eigen.tpp  gru_xsimd.h  gru_xsimd.tpp
hi_tools/hi_neural/RTNeural/RTNeural/lstm/: lstm.h  lstm.tpp  lstm_eigen.h  lstm_eigen.tpp  lstm_xsimd.h  lstm_xsimd.tpp
hi_tools/hi_neural/RTNeural/RTNeural/maths/: maths_eigen.h  maths_stl.h  maths_xsimd.h
hi_tools/hi_neural/RTNeural/RTNeural/wavenet/: wavenet_layer.hpp  wavenet_layer_array.hpp  wavenet_model.hpp
hi_tools/hi_neural/RTNeural/RTNeural/xsimd-legacy/: README.md
hi_tools/hi_neural/RTNeural/RTNeural/xsimd-legacy/algorithms/: algorithms.hpp
(+4042 files in other folders)
